# GitSovereign

./: Dockerfile
00000-Knowledge-Foundations/000-Sovereign-Anchor/: ARCHITECTURE.md
00000-Knowledge-Foundations/000-Sovereign-Anchor/100-Vision/: ASSURANCE_FINAL.jebnf  BUILDER_REPORT.md  BUILDER_REPORT_P0.md  BUILDER_REPORT_P1.md  BUILDER_REPORT_P2.md  BUILDER_REPORT_P3.md  BUILDER_REPORT_P4.md  BUILDER_REPORT_P5.md  BUILDER_REPORT_P6.md  BUILDER_REPORT_P7.md  K106-Maturity-Roadmap.md  K107-GTM-Strategy.md  K108-Sovereign-Triggers.md  K109-Strategic-Horizon.md  TRX-Triggers.jebnf  ValueUnits.jebnf
00000-Knowledge-Foundations/000-Sovereign-Anchor/200-Architecture/: ADR-014.md  ADR-015-Topology-DAG-Capture.md  ADR-016-Per-Branch-Backup-Tree.md  ADR-017-BLAKE3-CAS-Addressing.md  CYC-00268-Adaptive-Harvesting-Pipeline.md  CYC-00269-Sovereign-Rehydration-Pipeline.md
00000-Knowledge-Foundations/500-ADR/: ADR-014-Firehorse-Transport.md
00000-Knowledge-Foundations/510-Pulse-Reports/: CHRONICLE_CYC-00268_GRADUATION.md  PULSE_0_FINDINGS.md  PULSE_1_BLUEPRINT.md  UI_GRADUATION_M3.md
00000-Knowledge-Foundations/520-Specifications/: ARCHITECTURAL_GLOSSARY.md  TECHNICAL_SPECIFICATION.md
50000-Communication-Contracts/511-Interaction-Surface/: .metadata  BUILD.bazel  README.md  analysis_options.yaml  pubspec.yaml
50000-Communication-Contracts/511-Interaction-Surface/.dart_tool/: package_config.json  package_graph.json
50000-Communication-Contracts/511-Interaction-Surface/.dart_tool/flutter_build/16f2f947f9c7dd61f354e3de7cc1bb77/: .filecache  app.dill.deps  dart2js.d  dart2js.stamp  dart2wasm.d  dart2wasm.stamp  dart_build.d  dart_build.stamp  dart_build_result.json  flutter_assets.d  main.dart.js  main.dart.js.deps  main.dart.mjs  outputs.json  web_entrypoint.stamp  web_release_bundle.stamp  web_resources.d  web_static_assets.stamp
50000-Communication-Contracts/511-Interaction-Surface/.dart_tool/flutter_build/59fc6754ccec39cdb1f11ebefacb08e4/: .filecache  app.dill.deps  dart2js.d  dart2js.stamp  dart2wasm.d  dart2wasm.stamp  dart_build.d  dart_build.stamp  dart_build_result.json  flutter_assets.d  main.dart.js  main.dart.js.deps  main.dart.wasm  outputs.json  service_worker.d  web_entrypoint.stamp  web_release_bundle.stamp  web_resources.d  web_service_worker.stamp  web_static_assets.stamp  web_templated_files.stamp
50000-Communication-Contracts/511-Interaction-Surface/.dart_tool/flutter_build/5f70bf41dc27ea6ca6281e954f2e0eb8/: .filecache  app.dill.deps  dart2js.d  dart2wasm.d  dart_build.d  dart_build.stamp  dart_build_result.json  flutter_assets.d  main.dart  main.dart.js  main.dart.js.deps  main.dart.mjs  main.dart.wasm  outputs.json  service_worker.d  web_entrypoint.stamp  web_release_bundle.stamp  web_service_worker.stamp  web_static_assets.stamp  web_templated_files.stamp
50000-Communication-Contracts/511-Interaction-Surface/.dart_tool/flutter_build/ec708c1eeb92c4255aecd029916ab90c/: .filecache  dart_build.d  dart_build.stamp  dart_build_result.json  web_entrypoint.stamp  web_static_assets.stamp
50000-Communication-Contracts/511-Interaction-Surface/Pub/Cache/hosted/pub.dev/.cache/: async-versions.json  boolean_selector-versions.json  characters-versions.json  clock-versions.json  collection-versions.json  fake_async-versions.json  flutter_lints-versions.json  leak_tracker-versions.json  leak_tracker_flutter_testing-versions.json  leak_tracker_testing-versions.json  lints-versions.json  matcher-versions.json  material_color_utilities-versions.json  meta-versions.json  nested-versions.json  path-versions.json  provider-versions.json  source_span-versions.json  stack_trace-versions.json  stream_channel-versions.json  string_scanner-versions.json  term_glyph-versions.json  test_api-versions.json  vector_math-versions.json  vm_service-versions.json  web-versions.json
50000-Communication-Contracts/511-Interaction-Surface/lib/: main.dart  web_utils_stub.dart  web_utils_web.dart
50000-Communication-Contracts/511-Interaction-Surface/lib/theme/: institutional_tier.dart
50000-Communication-Contracts/511-Interaction-Surface/test/: widget_test.dart
50000-Communication-Contracts/511-Interaction-Surface/web/: index.html
50000-Communication-Contracts/511-Interaction-Surface/windows/: CMakeLists.txt
50000-Communication-Contracts/511-Interaction-Surface/windows/runner/: Runner.rc  main.cpp
60000-Information-Storage/610-SmartPipe/: ASSURANCE_GRADUATION.jebnf  ASSURANCE_HFD_20260328-071452.jebnf  BUILD.bazel  auth.go  auth_test.go  bundle.go  common_test.go  components.go  control_plane.go  control_plane_test.go  dedup.go  dedup_test.go  discovery.go  discovery_test.go  framing.go  github.go  go.mod  go.sum  ingestion.go  ingestion_test.go  jebnf_serializer.go  main.go  main_test.go  scheduling_test.go  server.go  shield.go  storage.go  transport.go  tree_compare.go
60000-Information-Storage/610-SmartPipe/900-Execution-Points/bridge/: BUILD.bazel  gdrive_egress.go  github_client.go  quic_streamer.go  streaming_deduper.go
60000-Information-Storage/610-SmartPipe/900-Execution-Points/harvester/: BUILD.bazel  main.go
60000-Information-Storage/610-SmartPipe/gitsovkey/: gitsovkey.go
90000-Enablement-Labs/900-Forge/: BUILD.bazel  BUILD_MANIFEST.jebnf
Backend/: go.mod
C0100-Configuration-Registry/: REHYDRATE_MANIFEST.jebnf  sync_registry.jebnf
conductor/tracks/: P-006-Zero-Disk.md
