load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "610-SmartPipe_lib",
    srcs = [
        "auth.go",
        "bundle.go",
        "control_plane.go",
        "dedup.go",
        "framing.go",
        "github.go",
        "main.go",
        "server.go",
        "shield.go",
        "storage.go",
        "transport.go",
    ],
    embedsrcs = ["dist/index.html"],
    importpath = "olympus.fleet/60PROX/GitSovereign/60000-Information-Storage/610-SmartPipe",
    visibility = ["//visibility:private"],
    deps = [
        "//00SDLC/Olympus2/C0990-Ephemeral-Scratch/bazel-root/75zooped/external/gazelle++go_deps+com_github_quic_go_quic_go:quic-go",
        "//00SDLC/Olympus2/C0990-Ephemeral-Scratch/bazel-root/75zooped/external/gazelle++go_deps+org_golang_x_oauth2:oauth2",
        "@org_golang_google_api//drive/v3:drive",
        "@org_golang_google_api//option",
    ],
)

go_binary(
    name = "610-SmartPipe",
    embed = [":610-SmartPipe_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "610-SmartPipe_test",
    srcs = [
        "auth_test.go",
        "control_plane_test.go",
        "dedup_test.go",
    ],
    embed = [":610-SmartPipe_lib"],
)
