load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "610-SmartPipe_lib",
    srcs = [
        "auth.go",
        "bundle.go",
        "components.go",
        "control_plane.go",
        "dedup.go",
        "discovery.go",
        "framing.go",
        "github.go",
        "ingestion.go",
        "jebnf_serializer.go",
        "main.go",
        "server.go",
        "shield.go",
        "storage.go",
        "transport.go",
        "tree_compare.go",
    ],
    embedsrcs = ["dist/index.html"],
    importpath = "olympus.fleet/60PROX/GitSovereign/60000-Information-Storage/610-SmartPipe",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_quic_go_quic_go//:quic-go",
        "@org_golang_x_oauth2//:oauth2",
        "//00SDLC/OlympusLogicLibrary/90200-Logic-Libraries/110-gitsov-key:gitsov-key", 
        "//00SDLC/OlympusLogicLibrary/90200-Logic-Libraries/120-gitsov-notary:gitsov-notary",
        "//00SDLC/OlympusLogicLibrary/90200-Logic-Libraries/120-adph:adph",
        "@com_github_lukechampine_blake3//:blake3",
        "@com_github_quic_go_quic_go//http3",
        "@org_golang_google_api//drive/v3:drive",
        "@org_golang_google_api//option",
    ],
    )
go_binary(
    name = "610-SmartPipe",
    embed = [":610-SmartPipe_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "610-SmartPipe_test",
    srcs = [
        "auth_test.go",
        "common_test.go",
        "control_plane_test.go",
        "dedup_test.go",
        "discovery_test.go",
        "ingestion_test.go",
    ],
    embed = [":610-SmartPipe_lib"],
)
