load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "harvester_lib",
    srcs = ["main.go"],
    importpath = "olympus.fleet/60PROX/GitSovereign/60000-Information-Storage/610-SmartPipe/900-Execution-Points/harvester",
    visibility = ["//visibility:public"],
    deps = [
        "//60PROX/GitSovereign/00000-Knowledge-Foundations/110-Hashing-Vault/90200-Logic-Libraries/110-gitsov-key:gitsov-key",
        "//60PROX/GitSovereign/00000-Knowledge-Foundations/110-Hashing-Vault/90200-Logic-Libraries/120-adph:adph",
    ],
)

go_binary(
    name = "harvester",
    embed = [":harvester_lib"],
    visibility = ["//visibility:public"],
)
